metadatafullcopy/unpackaged/objects/EconzIntegration__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>EndPointURL__c</fullName>
        <label>End Point URL</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserID__c</fullName>
        <label>UserID</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Econz Integration</label>
</CustomObject>